--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Runs at 7:40 am  '0 0 * * *'  UTC
     - cron: "40 7 * * *"
-
+  workflow_dispatch:
 jobs:
   update-readme:
     name: Update the WakaTime Stat
